name:                scheme-in-48h
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rashack/scheme-in-48h#readme
license:             BSD3
license-file:        LICENSE
author:              Kjell Andreassen
maintainer:          andreassen.kjell@gmail.com
copyright:           Kjell Andreassen
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LispError
                     , LispVal
                     , Parser
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , parsec
  default-language:    Haskell2010

executable scheme-in-48h
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , parsec
                     , scheme-in-48h
  default-language:    Haskell2010

test-suite scheme-in-48h-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parsec
                     , scheme-in-48h
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rashack/scheme-in-48h
